--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Header -->
   <nav class="navbar navbar-expand-lg navbar-dark abc fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="./assets/techland_mini_logos.jpg" alt="Logo" width="100"></a>
+      <a class="navbar-brand" href="#"><img src="./assets/logo.png" alt="Logo" width="400"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -132,7 +132,7 @@
       <!-- Product 1 -->
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Processor/intel-core-i9-12900-12th-processor-550x550.jpg" class="card-img-top"
+          <img src="./assets/Processor/intel-core-i9-12900-12th-processor-1000x1000.jpg" class="card-img-top"
             alt="Processor">
           <div class="card-body">
             <h5 class="card-title">Intel Core i9-12900</h5>
@@ -154,7 +154,7 @@
 
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Processor/Intel-i9-12900K-550x550.jpg" class="card-img-top" alt="Processor">
+          <img src="./assets/Processor/Intel-i9-12900K-1000x1000.jpg" class="card-img-top" alt="Processor">
           <div class="card-body">
             <h5 class="card-title">Intel Core i9-12900K</h5>
             <div class="rating mb-2">
@@ -175,7 +175,7 @@
        
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Processor/Intel-i9-12900K-550x550.jpg" class="card-img-top" alt="Processor">
+          <img src="./assets/Processor/amd-ryzen-9-9950x3d-gaming-processor-1000x1000.jpg" class="card-img-top" alt="Processor">
           <div class="card-body">
             <h5 class="card-title">High-End Processor</h5>
             <div class="rating mb-2">
@@ -368,7 +368,7 @@
 
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Processor/amd-ryzen-7-5700g-processor-550x550.jpg" class="card-img-top" alt="Processor">
+          <img src="./assets/Processor/amd-ryzen-9-7950x3d-gaming-processor-1000x1000h.jpg" class="card-img-top" alt="Processor">
           <div class="card-body">
             <h5 class="card-title">High-End Processor</h5>
             <div class="rating mb-2">
@@ -389,7 +389,7 @@
 
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Processor/intel-core-i9-12900-12th-processor-550x550.jpg" class="card-img-top"
+          <img src="./assets/Processor/intel-core-ultra-9-285k-processor-1-1000x1000.jpg" class="card-img-top"
             alt="Processor">
           <div class="card-body">
             <h5 class="card-title">High-End Processor</h5>
@@ -411,7 +411,7 @@
 
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Processor/Intel-i9-12900K-550x550.jpg" class="card-img-top" alt="Processor">
+          <img src="./assets/Processor/intel-core-i7-14700kf-processor-1100x1100.jpg" class="card-img-top" alt="Processor">
           <div class="card-body">
             <h5 class="card-title">High-End Processor</h5>
             <div class="rating mb-2">
@@ -432,7 +432,7 @@
 
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Cooler/aura-gl360-550x550.jpg" class="card-img-top" alt="Processor">
+          <img src="./assets/Cooler/asus-rog-ryujin-iii-360-argb-cpu-cooler-white-1100x1100.jpg" class="card-img-top" alt="Processor">
           <div class="card-body">
             <h5 class="card-title">High-End Cooler</h5>
             <div class="rating mb-2">
@@ -453,7 +453,7 @@
 
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Cooler/gamdias-chione-m3-240w-cpu-cooler-01-550x550.jpg" class="card-img-top"
+          <img src="./assets/Cooler/nzxt-kraken-elite-360mm-aio-cpu-liquid-cooler-white-7-1000x1000.jpg" class="card-img-top"
             alt="Processor">
           <div class="card-body">
             <h5 class="card-title">High-End Cooler</h5>
@@ -475,7 +475,7 @@
 
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Desktop/asus-expertcenter-d5-d500me-mini-tower-brand-pc-550x550.jpg" class="card-img-top"
+          <img src="./assets/pc-6-1000x1000.jpg" class="card-img-top"
             alt="Processor">
           <div class="card-body">
             <h5 class="card-title">High-End Brand PC</h5>
@@ -497,7 +497,7 @@
 
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Desktop/dell-optiplex-7000-core-i5-12th-tower-brand-pc-2-550x550.jpg" class="card-img-top"
+          <img src="./assets/pc-0122-1000x1000.jpg" class="card-img-top"
             alt="Processor">
           <div class="card-body">
             <h5 class="card-title">High-End Brand PC</h5>
@@ -519,7 +519,7 @@
 
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Desktop/dell-optiplex-7010-i3-13th-gen-tower-brand-pc-550x550.jpg" class="card-img-top"
+          <img src="./assets/257000-pc-1000x1000.jpg" class="card-img-top"
             alt="Processor">
           <div class="card-body">
             <h5 class="card-title">High-End Brand PC</h5>
@@ -541,7 +541,7 @@
 
       <div class="col-md-4 col-lg-3">
         <div class="card h-100 product-card">
-          <img src="./assets/Desktop/dell-vostro-3020-mt-core-i7-13th-gen-brand-pc-1-550x550.jpg" class="card-img-top"
+          <img src="./assets/36140-pc-1100x1100.jpg" class="card-img-top"
             alt="Processor">
           <div class="card-body">
             <h5 class="card-title">High-End Brand PC</h5>
